--- a/app/assets/stylesheets/desktop/user-card.scss
+++ b/app/assets/stylesheets/desktop/user-card.scss
@@ -20,14 +20,11 @@ $user_card_background: #222;
           transition: opacity .2s, transform .2s;
 
   opacity: 0;
-  -webkit-transform: scale(.9);
-      -ms-transform: scale(.9);
-          transform: scale(.9);
+  @include transform(scale(.9));
+
   &.show {
     opacity: 1;
-    -webkit-transform: scale(1);
-        -ms-transform: scale(1);
-            transform: scale(1);
+    @include transform(scale(1));
   }
 
   .card-content {
